--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ set-option -g prefix C-x
 unbind-key C-x
 bind-key C-x send-prefix
 set -g base-index 1
+set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
+
 
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
